# Autoscaling

./: .gitignore  AutoscalingInterface.cpp  AutoscalingInterface.h  CMakeLists.txt  InputContainer.cpp  InputContainer.h  README.md  Simulator.cpp  Simulator.h  TrivialAutoscale.cpp  TrivialAutoscale.h  main.cpp  test.xml
