cmake_minimum_required(VERSION 3.6)
project(MasterProject)
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(${PROJECT_SOURCE_DIR}/tinyxml2)
link_directories(${PROJECT_SOURCE_DIR}/tinyxml2)
set(SOURCE_FILES main.cpp InputContainer.cpp InputContainer.h Simulator.cpp Simulator.h AutoscalingInterface.cpp AutoscalingInterface.h TrivialAutoscale.cpp TrivialAutoscale.h)
add_executable(MasterProject ${SOURCE_FILES})
target_link_libraries(MasterProject tinyxml2)